[gd_scene load_steps=6 format=3 uid="uid://d1jafoie06dxr"]

[ext_resource type="Texture2D" uid="uid://ued7pxnqnlmf" path="res://images/barbTL01.png" id="1_hspgs"]
[ext_resource type="Script" path="res://testedel.gd" id="2_pb4u5"]
[ext_resource type="Script" path="res://mouseSprite2.gd" id="4_706hu"]
[ext_resource type="Script" path="res://mouseSprite.gd" id="4_etjeh"]
[ext_resource type="Script" path="res://Grid.gd" id="5_jcu8m"]

[node name="Node2D" type="Node2D"]

[node name="view" type="SubViewportContainer" parent="."]
visible = false
offset_right = 1400.0
offset_bottom = 800.0

[node name="port" type="SubViewport" parent="view"]
disable_3d = true
transparent_bg = true
handle_input_locally = false
positional_shadow_atlas_quad_0 = 0
positional_shadow_atlas_quad_1 = 0
positional_shadow_atlas_quad_2 = 0
positional_shadow_atlas_quad_3 = 0
size = Vector2i(1400, 800)
render_target_clear_mode = 1
render_target_update_mode = 0

[node name="mouseSprite2" type="Sprite2D" parent="view/port"]
visible = false
centered = false
script = ExtResource("4_706hu")

[node name="testedel" type="TextureRect" parent="."]
offset_right = 736.0
offset_bottom = 576.0
texture = ExtResource("1_hspgs")
script = ExtResource("2_pb4u5")

[node name="mouseSprite" type="Sprite2D" parent="."]
centered = false
script = ExtResource("4_etjeh")

[node name="Grid" type="Node2D" parent="."]
script = ExtResource("5_jcu8m")

[connection signal="mouse_entered" from="testedel" to="testedel" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="testedel" to="testedel" method="_on_mouse_exited"]
